--- a/ImoNestApp/package.json
+++ b/ImoNestApp/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.1",
+    "@expo/webpack-config": "*",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/hooks": "^100.1.0",
     "@react-navigation/native": "^7.1.14",
@@ -19,7 +19,6 @@
     "expo": "~53.0.17",
     "expo-av": "~15.1.7",
     "expo-file-system": "~18.1.11",
-    "expo-linking": "^7.1.7",
     "expo-notifications": "^0.31.3",
     "expo-router": "^5.1.3",
     "expo-secure-store": "^14.2.3",
@@ -31,7 +30,6 @@
     "react-dom": "^19.0.0",
     "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
-    "react-native-safe-area-context": "^5.5.2",
     "react-native-signature-canvas": "^5.0.1",
     "react-native-web": "^0.20.0"
   },
