--- a/ImoNestApp/package.json
+++ b/ImoNestApp/package.json
@@ -9,33 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "*",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@expo/webpack-config": "^19.0.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/hooks": "^100.1.0",
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/native-stack": "^7.3.21",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.10.0",
     "babel-plugin-dotenv-import": "^3.0.1",
-    "expo": "~53.0.17",
-    "expo-av": "~15.1.7",
-    "expo-file-system": "~18.1.11",
-    "expo-notifications": "^0.31.3",
-    "expo-router": "^5.1.3",
-    "expo-secure-store": "^14.2.3",
-    "expo-speech": "~13.1.7",
-    "expo-status-bar": "~2.2.3",
-    "expo-updates": "~0.28.17",
+    "expo": "~50.0.0",
+    "expo-av": "~13.10.6",
+    "expo-file-system": "~16.0.9",
+    "expo-notifications": "~0.27.8",
+    "expo-router": "~3.4.10",
+    "expo-secure-store": "~12.8.1",
+    "expo-speech": "~11.7.0",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.13",
     "moment": "^2.30.1",
-    "react": "19.0.0",
-    "react-dom": "^19.0.0",
-    "react-native": "0.79.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-signature-canvas": "^5.0.1",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.2.45",
     "typescript": "~5.8.3"
   },
   "private": true
