--- a/ImoNestApp/app.json
+++ b/ImoNestApp/app.json
@@ -31,7 +31,8 @@
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "webpackConfig": "./webpack.config.js"
     },
     "extra": {
       "eas": {
