--- a/ImoNestApp/package.json
+++ b/ImoNestApp/package.json
@@ -1,7 +1,12 @@
 {
   "name": "imonestapp",
   "version": "1.0.0",
-  "main": "App.js",
+  "main": "expo-router/entry",
+  "expo": {
+    "plugins": [
+      "expo-router"
+    ]
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -16,6 +21,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.10.0",
     "babel-plugin-dotenv-import": "^3.0.1",
+    "crypto-browserify": "^3.12.1",
     "expo": "~50.0.0",
     "expo-av": "~13.10.6",
     "expo-file-system": "~16.0.9",
@@ -31,7 +37,8 @@
     "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-signature-canvas": "^5.0.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
