Revert "try to deploy"
This reverts commit f096ad679c7c190806aa13dc8ac1adb6d30276c1.

--- a/ImoNestApp/app.json
+++ b/ImoNestApp/app.json
@@ -31,8 +31,7 @@
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "favicon": "./assets/favicon.png",
-      "webpackConfig": "./webpack.config.js"
+      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
