--- a/ImoNestApp/package.json
+++ b/ImoNestApp/package.json
@@ -28,7 +28,9 @@
     "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-signature-canvas": "^5.0.1",
-    "expo-updates": "~0.28.17"
+    "expo-updates": "~0.28.17",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
